<resources>
    <string name="not_implemented">Not implemented now</string>

    <string name="app_name">AviaApplication</string>
    <string name="title_main_search">Найти билет</string>

    <string name="app_title_load">AVIA\nPROJECT</string>
    <string name="title_home">Личный кабинет</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorite">Избранное</string>
<!--home screen buttons & etc.-->
    <string name="title_user_name">Информация о пользователе</string>
    <string name="button_change_name">Изменить имя</string>
    <string name="button_change_pass">Сменить пароль</string>
    <string name="title_settings">Настройки</string>
    <string name="button_teleg_notifications">Подписаться на уведомления в телеграмм</string>
    <string name="button_payment_history">История платежей</string>
<!--Home screen settings-->
    <string name="title_currency">Валюта</string>
    <string name="text_currency">RUB</string>
    <string name="title_country">Регион</string>
    <string name="text_country">Россия</string>
    <string name="title_tickets_count">Куплено билетов</string>
    <string name="text_tickets_count">0</string>
    <string name="text_confirm">Вы уверены?</string>new Toast(this.getContext())
    <string name="text_login_button">Войти</string>
    <string name="text_logout_button">Выйти</string>

    <!-- login screen-->
    <string name="text_login_header">Вход</string>
    <string name="hint_email">email</string>
    <string name="hint_pass">Пароль</string>
    <string name="hint_name">Ваше имя</string>
<!-- register screen-->
    <string name="text_register_button">Регистрация</string>
<!-- recover pass screen-->
    <string name="title_recover_pass">Сброс пароля</string>
    <string name="text_recover_pass">Сбросить пароль</string>
<!-- change pass screen-->
    <string name="title_change_pass">Смена пароля</string>
    <string name="text_change_pass">Сменить пароль</string>
    <string name="hint_sec_pass">Подтверждение пароля</string>
<!-- change name screen-->
    <string name="title_change_name">Изменение имени</string>
    <string name="hint_change_name">Ваше новое имя</string>
    <string name="hint_current_pass">Ваш пароль</string>
    <string name="text_change_name">Подтвердить</string>
<!--  flight info screen-->
    <string name="text_business_class_switch">Бизнес</string>
    <string name="text_economy_class_switch">Эконом</string>
<!--  passenger list element-->
    <string name="hint_name_tv">Имя</string>
    <string name="hint_surname_tv">Фамилия</string>
    <string name="hint_date_of_birth">Дата рождения</string>
    <string name="hint_pass_data_tv">Паспортные данные</string>

<!--  shared preferenses keys  -->
    <string name="key_current_user_name">tp.project.aviaApplication.key_current_user_name</string>


<!--  client_api  -->
<!--    <string name="server_client_id">717640529342-efnptksjs3v9fs7ehlu0qs0splujfigl.apps.googleusercontent.com</string>-->
    <string name="server_client_id">717640529342-36vdtjs2pj96u0kplbdbh0lsmr74v7b6.apps.googleusercontent.com</string>

</resources>