<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jordy_blue"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="10"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="8">

            <Button
                android:id="@+id/button_back"
                android:text="@string/text_register_button"
                style="@style/ButtonBackOnLoginScreens" />

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/EditTextOnLoginScreen"
                android:hint="@string/hint_name"
                android:inputType="textCapCharacters"
                android:autofillHints="name"/>


            <EditText
                android:id="@+id/email_edit_text"
                style="@style/EditTextOnLoginScreen"
                android:autoLink="email"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:autofillHints="email"/>

            <EditText
                android:id="@+id/pass_edit_text"
                style="@style/EditTextOnLoginScreen"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:autofillHints="password"/>

            <Button
                android:id="@+id/button_register"
                style="@style/ButtonOnLoginScreens"
                android:text="@string/text_register_button" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>