<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_home_margin"
        android:text="passenger_n"
        style="@style/TextViewInSettings"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_home_margin"
        app:cardCornerRadius="@dimen/default_corner_radius"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider_linear_layout"
            android:dividerPadding="@dimen/default_login_padding"
            android:showDividers="middle"
            android:orientation="vertical">


            <EditText
                android:id="@+id/passenger_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_login_padding"
                android:layout_margin="@dimen/default_home_margin"
                android:inputType="text"
                android:background="@null"
                android:hint="@string/hint_name_tv" />

            <EditText
                android:id="@+id/passenger_second_name"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_home_margin"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_login_padding"
                android:inputType="text"
                android:background="@null"
                android:hint="@string/hint_surname_tv" />

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_home_margin"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_login_padding"
                android:inputType="text"
                android:background="@null"
                android:hint="@string/hint_date_of_birth" />


            <EditText
                android:id="@+id/passport_data"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/default_home_margin"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_login_padding"
                android:inputType="text"
                android:background="@null"
                android:hint="@string/hint_pass_data_tv" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>